Overlay: 'Show Cone' for Spotlights not working anymore #72574

Closed
opened 2019-12-19 13:16:40 +01:00 by Philipp Oeser · 11 comments
Member

System Information
Operating system: Linux-5.3.12-200.fc30.x86_64-x86_64-with-fedora-30-Thirty 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.31

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-19 09:05, hash: 076cedc777
Worked: 9516921c05^

Short description of error
The Show Cone option for a spotlight is not drawing anymore, this is in addition to #72871.

Exact steps for others to reproduce the error
overlay_spotlight_show_cone_bug.blend

  • Open file, observe this issue:
  • the cone itself [transparent cone overlay] is not drawn at all

So this degraded in multiple steps:

  • 2.81a still good
    (- 9516921c05 would still draw the cone (but much smaller/shorter than before))
  • 1b33e1f9ae doesnt draw cone anymore
**System Information** Operating system: Linux-5.3.12-200.fc30.x86_64-x86_64-with-fedora-30-Thirty 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.31 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-19 09:05, hash: `076cedc777` Worked: 9516921c05^ **Short description of error** The `Show Cone` option for a spotlight is not drawing anymore, this is in addition to #72871. **Exact steps for others to reproduce the error** [overlay_spotlight_show_cone_bug.blend](https://archive.blender.org/developer/F8234145/overlay_spotlight_show_cone_bug.blend) - Open file, observe this issue: - the cone itself [transparent cone overlay] is not drawn at all So this degraded in multiple steps: - 2.81a still good (- 9516921c05 would still draw the cone (but much smaller/shorter than before)) - 1b33e1f9ae doesnt draw cone anymore
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Author
Member

Marking as High prio (since it is a regression...)

Marking as High prio (since it is a regression...)
Author
Member

Added subscriber: @fclem

Added subscriber: @fclem
Author
Member
@fclem
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Please make a report per issue. I am not sure if (1) is actually a bug, or that this is part of the new implementation that needs to be fine tuned.

Please make a report per issue. I am not sure if (1) is actually a bug, or that this is part of the new implementation that needs to be fine tuned.
Author
Member

OK, split the report, #72871 (Overlay: 'Show Cone' for Spotlights is much smaller than before) is the other one...

OK, split the report, #72871 (Overlay: 'Show Cone' for Spotlights is much smaller than before) is the other one...
Jeroen Bakker self-assigned this 2020-01-03 11:28:20 +01:00
Member

Is related to how sub groups are created in overlay_extra. master is failing when the overlay extra's isn't drawing lines. It seems to be failing for cones and stereoscopic cameras

Is related to how sub groups are created in `overlay_extra`. master is failing when the overlay extra's isn't drawing lines. It seems to be failing for cones and stereoscopic cameras
Jeroen Bakker removed their assignment 2020-01-03 11:47:35 +01:00
Clément Foucault was assigned by Jeroen Bakker 2020-01-03 11:47:35 +01:00

Added subscriber: @Vyach

Added subscriber: @Vyach

This issue was referenced by aa3720ed82

This issue was referenced by aa3720ed82fe46a31894437519478b79dd2939f8

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72574
No description provided.