Fix T72574 Overlay: 'Show Cone' for Spotlights not working anymore